[package]
name = "mmids-app"
version = "1.1.1"
edition = "2018"

[dependencies]
mmids-core = { path = "../mmids-core" }
mmids-gstreamer = { path = "../mmids-gstreamer" }
mmids-rtmp = { path = "../mmids-rtmp" }
mmids-ffmpeg = { path = "../mmids-ffmpeg" }

tokio = { version = "1.21", features = ["sync", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.2", features = ["json"] }
tracing-futures = "0.2.5"
tracing-appender = "0.2.0"
native-tls = "0.2"
hyper = { version = "0.14", features = ["full"] }
async-trait = "0.1.51"
