[package]
name = "mmids-app"
version = "1.1.1"
edition = "2018"

[dependencies]
mmids-core = { path = "../mmids-core" }
mmids-ffmpeg = { path = "../mmids-ffmpeg" }
mmids-gstreamer = { path = "../mmids-gstreamer" }
mmids-http-api = { path = "../mmids-http-api" }
mmids-rtmp = { path = "../mmids-rtmp" }

async-trait = "0.1.51"
hyper = { version = "0.14", features = ["full"] }
native-tls = "0.2"
tokio = { version = "1.24", features = ["sync", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.2", features = ["json"] }
