[package]
name = "mmids-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12", features = ["full"] }
futures = "0.3"
bytes = "1"
uuid = { version = "0.8", features = ["v4"] }
rml_rtmp = "0.4.3"
downcast-rs = "1.2.0"
thiserror = "1.0"
pest = "2.1"
pest_derive = "2.1"
cidr-utils = "0.5.5"
tokio-native-tls = "0.3"
native-tls = "0.2"
tracing = { version = "0.1", features = ["log"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.51"
