[package]
name = "mmids-core"
description = "Powerful and user friendly live video server"
authors = ["Matthew Shapiro <me@mshapiro.net>"]
version = "1.1.2"
edition = "2018"
repository = "https://github.com/KallDrexx/mmids"
license = "MIT"
readme = "Readme.md"
documentation = "https://kalldrexx.github.io/mmids/"

[features]
test-utils = []

[dependencies]
tokio = { version = "1.21", features = ["sync", "rt-multi-thread", "macros"] }
futures = "0.3"
bytes = "1"
uuid = { version = "1.2", features = ["v4"] }
downcast-rs = "1.2.0"
thiserror = "1.0"
pest = "2.1"
pest_derive = "2.1"
cidr-utils = "0.5.5"
tokio-native-tls = "0.3"
native-tls = "0.2"
tracing = { version = "0.1", features = ["log"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.51"
async-recursion = "0.3.2"
byteorder = "1.4.3"
anyhow = "1.0.54"

