[package]
name = "mmids-core"
description = "Powerful and user friendly live video server"
authors = ["Matthew Shapiro <me@mshapiro.net>"]
version = "2.0.0-dev.7"
edition = "2018"
repository = "https://github.com/KallDrexx/mmids"
license = "MIT"
readme = "Readme.md"
documentation = "https://kalldrexx.github.io/mmids/"

[features]
test-utils = []

[dependencies]
anyhow = "1.0"
async-recursion = "0.3.2"
async-trait = "0.1.51"
byteorder = "1.4.3"
bytes = "1"
cidr-utils = "0.5.5"
downcast-rs = "1.2.0"
futures = "0.3"
hyper = { version = "0.14", features = ["client"] }
lazy_static = "1.4"
native-tls = "0.2"
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.24", features = ["sync", "rt-multi-thread", "macros"] }
tokio-native-tls = "0.3"
tokio-util = "0.7"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1.2", features = ["v4"] }

