[package]
name = "mmids-ffmpeg"
version = "0.1.0"
edition = "2021"

[dependencies]
mmids-core = {path = "../mmids-core"}
mmids-rtmp = {path = "../mmids-rtmp"}

anyhow = "1.0"
bytes = "1.2"
futures = "0.3"
rml_rtmp = "0.6"
thiserror = "1.0"
tokio = {version = "1.21", features = ["sync", "fs", "process"]}
tracing = {version = "0.1", features = ["log"]}
uuid = {version = "1.2", features = ["v4"]}

[dev-dependencies]
mmids-core = {path = "../mmids-core", features = ["test-utils"]}
