[package]
name = "mmids-gstreamer"
version = "0.1.0"
edition = "2021"

[dependencies]
mmids-core = {path = "../mmids-core"}

tokio = "1.15"
bytes = "1.1.0"
anyhow = "1.0.53"
thiserror = "1.0.30"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "0.8.2", features = ["v4"]}
futures = "0.3"
lazy_static = "1.4.0"

gstreamer = "0.18.3"
gstreamer-app = "0.18.0"
gstreamer-audio = "0.18.0"
