[package]
name = "mmids-gstreamer"
version = "0.1.0"
edition = "2021"

[dependencies]
mmids-core = {path = "../mmids-core"}

anyhow = "1.0"
bytes = "1.0"
futures = "0.3"
gstreamer = "0.18.3"
gstreamer-app = "0.18.0"
lazy_static = "1.4.0"
thiserror = "1.0"
tokio = "1.24"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1.0", features = ["v4"]}
