[package]
name = "mmids-rtp"
description = "Mmids crate for RTP based protocols (e.g. webrtc)"
version = "0.1.0"
edition = "2021"


[dependencies]
mmids-core = { path = "../mmids-core" }
webrtc = "0.4.0"
webrtc-media = "0.4.5"
rtp = "0.6.5"
tokio = { version = "1.15", features = ["full"] }
futures = "0.3"
bytes = "1"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
serde = "1.0.136"
serde_json = "1.0"
anyhow = "1.0.55"
async-trait = "0.1.52"
hyper = { version = "0.14", features = ["full"] }
