[package]
name = "ffmpeg-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
mmids-core = {path = "../../mmids-core"}
mmids-ffmpeg = {path = "../../mmids-ffmpeg"}

tokio = { version = "1.15", features = ["full"] }
env_logger = "0.9.0"
log = "0.4"
uuid = { version = "1.2", features = ["v4"] }
