[package]
name = "rtmp-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmids-core = {path = "../../mmids-core"}
mmids-rtmp = {path = "../../mmids-rtmp"}

tokio = { version = "1.24", features = ["full"] }
env_logger = "0.9"
log = "0.4"
